--- a/manage-institutes.html
+++ b/manage-institutes.html
@@ -1,76 +1,57 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>إدارة المعاهد - نظام OMA</title>
 <style>
-  body{font-family:'Cairo',sans-serif;background:#f5f9ff;margin:0;padding:20px;}
-  header{background:#004aad;color:white;text-align:center;padding:15px;font-size:20px;font-weight:bold;border-radius:8px;}
-  .wrap{max-width:900px;margin:20px auto;}
-  .card{background:white;padding:20px;margin-bottom:20px;border-radius:10px;box-shadow:0 4px 15px rgba(0,0,0,0.1);}
-  .card h3{color:#004aad;margin-top:0;}
-  input,button,select{padding:8px;border-radius:6px;border:1px solid #ccc;margin:4px 0;width:100%;box-sizing:border-box;}
-  button{background:#004aad;color:white;border:none;cursor:pointer;}
-  button:hover{background:#003380;}
-  table{width:100%;border-collapse:collapse;margin-top:12px;}
-  th,td{border:1px solid #ccc;padding:8px;text-align:center;}
-  th{background:#004aad;color:white;}
-  .flex{display:flex;gap:8px;flex-wrap:wrap;}
+:root{--primary:#004aad;--bg:#f5f9ff;--card:#fff;}
+body{margin:0;font-family:'Cairo',sans-serif;background:var(--bg);padding:20px;}
+header{background:var(--primary);color:#fff;text-align:center;padding:15px;font-size:20px;font-weight:bold;border-radius:8px;}
+h2{color:var(--primary);margin-top:20px;}
+.card{background:var(--card);padding:15px;border-radius:10px;margin-top:15px;box-shadow:0 4px 12px rgba(0,0,0,0.08);}
+input,button{padding:10px;margin:5px 0;border-radius:8px;border:1px solid #ccc;font-size:14px;}
+button{background:var(--primary);color:#fff;border:none;cursor:pointer;transition:0.3s;}
+button:hover{background:#003a8c;}
+table{width:100%;border-collapse:collapse;margin-top:15px;}
+th,td{padding:10px;border:1px solid #ddd;text-align:center;}
+th{background:var(--primary);color:#fff;}
+.error{color:red;font-size:14px;}
 </style>
 </head>
 <body>
+<header>🛠️ إدارة المعاهد - نظام OMA</header>
 
-<header>🗂️ إدارة المعاهد - نظام OMA</header>
-<div class="wrap">
+<div class="card">
+  <h2>إضافة معهد جديد</h2>
+  <p class="error" id="errorMsg"></p>
+  <input type="text" id="instName" placeholder="اسم المعهد" required />
+  <input type="email" id="adminEmail" placeholder="البريد الإلكتروني لمدير المعهد" required />
+  <input type="password" id="adminPass" placeholder="كلمة مرور مدير المعهد" required />
+  <button id="addInstituteBtn">➕ إضافة معهد</button>
+</div>
 
-  <!-- إضافة معهد جديد -->
-  <div class="card">
-    <h3>➕ إضافة معهد جديد</h3>
-    <form id="addInstituteForm">
-      <label>اسم المعهد:</label>
-      <input type="text" id="instName" required />
-      <label>إيميل مدير المعهد:</label>
-      <input type="email" id="instEmail" required />
-      <label>كلمة مرور المدير:</label>
-      <input type="password" id="instPassword" required />
-      <button type="submit">💾 إضافة المعهد</button>
-    </form>
-  </div>
-
-  <!-- إضافة مسؤول إضافي -->
-  <div class="card">
-    <h3>➕ إضافة مسؤول آخر لمعهد</h3>
-    <form id="addAdminForm">
-      <label>اختر المعهد:</label>
-      <select id="selectInstitute"></select>
-      <label>إيميل المسؤول:</label>
-      <input type="email" id="adminEmail" required />
-      <label>كلمة مرور المسؤول:</label>
-      <input type="password" id="adminPassword" required />
-      <button type="submit">💾 إضافة المسؤول</button>
-    </form>
-  </div>
-
-  <!-- قائمة المعاهد -->
-  <div class="card">
-    <h3>📋 قائمة المعاهد</h3>
-    <table>
-      <thead>
-        <tr><th>اسم المعهد</th><th>مدير المعهد</th><th>تاريخ الإنشاء</th></tr>
-      </thead>
-      <tbody id="institutesTable"></tbody>
-    </table>
-  </div>
-
+<div class="card">
+  <h2>قائمة المعاهد</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>اسم المعهد</th>
+        <th>البريد الإلكتروني للمدير</th>
+        <th>تاريخ الإنشاء</th>
+        <th>إجراءات</th>
+      </tr>
+    </thead>
+    <tbody id="institutesTable"></tbody>
+  </table>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, query, where } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getAuth, createUserWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// 🔹 إعداد Firebase
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -80,85 +61,106 @@ const firebaseConfig = {
   appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
   measurementId: "G-5CKWYQT9XZ"
 };
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const auth = getAuth(app);
 
-// 🔐 منع الوصول قبل تسجيل الدخول
-onAuthStateChanged(auth, user => {
-  if(!user) window.location.href = 'login.html';
-});
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
 // عناصر DOM
-const addInstituteForm = document.getElementById('addInstituteForm');
 const instName = document.getElementById('instName');
-const instEmail = document.getElementById('instEmail');
-const instPassword = document.getElementById('instPassword');
-
-const selectInstitute = document.getElementById('selectInstitute');
-const addAdminForm = document.getElementById('addAdminForm');
 const adminEmail = document.getElementById('adminEmail');
-const adminPassword = document.getElementById('adminPassword');
-
+const adminPass = document.getElementById('adminPass');
+const addInstituteBtn = document.getElementById('addInstituteBtn');
+const errorMsg = document.getElementById('errorMsg');
 const institutesTable = document.getElementById('institutesTable');
 
-// تحميل قائمة المعاهد
-async function loadInstitutes(){
-  const snap = await getDocs(collection(db,'institutes'));
-  institutesTable.innerHTML = '';
-  selectInstitute.innerHTML = '';
-  snap.forEach(d=>{
-    const data = d.data();
-    const tr = document.createElement('tr');
-    tr.innerHTML = `<td>${data.name}</td><td>${data.adminEmail}</td><td>${data.createdAt}</td>`;
-    institutesTable.appendChild(tr);
+// إضافة معهد جديد
+addInstituteBtn.addEventListener('click', async () => {
+  const name = instName.value.trim();
+  const email = adminEmail.value.trim();
+  const password = adminPass.value.trim();
+  if(!name || !email || !password){ errorMsg.textContent="جميع الحقول مطلوبة"; return; }
 
-    const opt = document.createElement('option');
-    opt.value = d.id;
-    opt.textContent = data.name;
-    selectInstitute.appendChild(opt);
+  errorMsg.textContent="";
+  addInstituteBtn.disabled = true;
+  addInstituteBtn.textContent="جاري الإنشاء...";
+
+  try{
+    // إنشاء حساب مدير المعهد في Firebase Auth
+    const userCred = await createUserWithEmailAndPassword(auth, email, password);
+    const uid = userCred.user.uid;
+
+    // إنشاء وثيقة المعهد
+    const instRef = await addDoc(collection(db,'institutes'), {
+      name: name,
+      adminEmail: email,
+      adminUid: uid,
+      createdAt: serverTimestamp()
+    });
+
+    // إنشاء حساب المستخدم في جدول users
+    await setDoc(doc(db,'users',uid),{
+      uid: uid,
+      email: email,
+      type: "instituteAdmin",
+      instituteId: instRef.id,
+      createdAt: serverTimestamp()
+    });
+
+    instName.value = ""; adminEmail.value = ""; adminPass.value = "";
+    addInstituteBtn.disabled = false;
+    addInstituteBtn.textContent = "➕ إضافة معهد";
+
+    loadInstitutes();
+    alert("تم إنشاء المعهد بنجاح!");
+  }catch(e){
+    console.error(e);
+    errorMsg.textContent = "حدث خطأ أثناء إنشاء المعهد.";
+    addInstituteBtn.disabled = false;
+    addInstituteBtn.textContent = "➕ إضافة معهد";
+  }
+});
+
+// تحميل المعاهد وعرضها
+async function loadInstitutes(){
+  institutesTable.innerHTML = "";
+  const snap = await getDocs(collection(db,'institutes'));
+  snap.forEach(docSnap=>{
+    const data = docSnap.data();
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td>${data.name || '-'}</td>
+      <td>${data.adminEmail || '-'}</td>
+      <td>${data.createdAt ? new Date(data.createdAt.seconds*1000).toLocaleDateString() : '-'}</td>
+      <td><button onclick="createAdditionalAdmin('${docSnap.id}','${data.adminUid}')">➕ إضافة مسؤول</button></td>
+    `;
+    institutesTable.appendChild(tr);
   });
 }
 
-// إضافة معهد جديد
-addInstituteForm.addEventListener('submit', async e=>{
-  e.preventDefault();
-  try{
-    // إنشاء حساب مدير المعهد
-    const userCred = await createUserWithEmailAndPassword(auth, instEmail.value, instPassword.value);
-    // إضافة المعهد إلى Firestore
-    await addDoc(collection(db,'institutes'),{
-      name: instName.value,
-      adminUid: userCred.user.uid,
-      adminEmail: instEmail.value,
-      createdAt: new Date().toLocaleDateString()
-    });
-    instName.value=''; instEmail.value=''; instPassword.value='';
-    alert('تم إنشاء المعهد بنجاح');
-    await loadInstitutes();
-  }catch(err){ console.error(err); alert('خطأ أثناء إنشاء المعهد'); }
-});
+// إنشاء مسؤول إضافي للمعهد
+window.createAdditionalAdmin = async (instituteId, originalAdminUid) => {
+  const email = prompt("أدخل بريد المسؤول الجديد:");
+  const password = prompt("أدخل كلمة المرور:");
+  if(!email || !password) return alert("البريد وكلمة المرور مطلوبة.");
 
-// إضافة مسؤول آخر للمعهد
-addAdminForm.addEventListener('submit', async e=>{
-  e.preventDefault();
   try{
-    // إنشاء حساب المسؤول
-    const userCred = await createUserWithEmailAndPassword(auth, adminEmail.value, adminPassword.value);
-    // ربطه بالمعهد المحدد
-    const instRef = collection(db,'institutes');
-    await addDoc(instRef.doc(selectInstitute.value).collection('admins'),{
-      uid: userCred.user.uid,
-      email: adminEmail.value
+    const userCred = await createUserWithEmailAndPassword(auth, email, password);
+    const uid = userCred.user.uid;
+    await setDoc(doc(db,'users',uid),{
+      uid: uid,
+      email: email,
+      type: "instituteAdmin",
+      instituteId: instituteId,
+      createdAt: serverTimestamp()
     });
-    adminEmail.value=''; adminPassword.value='';
-    alert('تم إضافة المسؤول بنجاح');
-  }catch(err){ console.error(err); alert('خطأ أثناء إضافة المسؤول'); }
-});
+    alert("تم إنشاء مسؤول إضافي بنجاح!");
+    loadInstitutes();
+  }catch(e){ console.error(e); alert("حدث خطأ أثناء إنشاء المسؤول."); }
+}
 
 // تحميل المعاهد عند فتح الصفحة
 loadInstitutes();
 </script>
-
 </body>
 </html>
